Created sensors temperature data class and method for retrieving this info. Also this method now add into status bar widget

--- a/macStatusSidePanel/Info.plist
+++ b/macStatusSidePanel/Info.plist
@@ -29,6 +29,8 @@
 			<key>NSExtensionPointVersion</key>
 			<string>2.0</string>
 		</dict>
+		<key>NSExtensionMainNibFile</key>
+		<string>TodayViewController</string>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widget-extension</string>
 		<key>NSExtensionPrincipalClass</key>
